@@ -1,0 +1,9 @@
+/////////////////////////////////////////////////////////////////////////////
+//
+// RT_MANIFEST
+//
+#ifdef TSVNSHELL
+
+IDR_DLLMANIFEST            RT_MANIFEST             "TortoiseSVN.dll.manifest"
+
+#endif
