@@ -1,3 +1,6 @@
+- BUG: The property page was always shown in english,
+       no matter what language was set. (Stefan)
+
 Version 0.19
 - BUG: The conflicted files weren't always determined
        correctly. (Stefan)
